--- a/.env
+++ b/.env
@@ -18,3 +18,13 @@
 APP_ENV=dev
 APP_SECRET=3cca0df691cea38ad69b2f22c6e67b24
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/todo-list?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://root:root@127.0.0.1:3306/todo-list?serverVersion=10.4.28-MariaDB&charset=utf8mb4"
+# DATABASE_URL="postgresql://root:@127.0.0.1:5432/todo-list?serverVersion=15&charset=utf8"
+###< doctrine/doctrine-bundle ###
